# resume

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: generate_pdf.yml  package.yml
example/: data.yml
resume/: main.py
resume_builder/: main.py
resume_builder/builder/: schema.py  services.py
resume_builder/templates/: resume.html
