[project]
name = "resume-builder"
version = "2.0.0"
description = "Build your resume using Python, CLI commands and yaml imports."
requires-python = ">=3.13"
authors = [
    { name = "Lukasz Zmudzinski", email = "lukasz@zmudzinski.sh" },
]

dependencies = [
    "jinja2>=3.1.3",
    "pdfkit>=1.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "C",  # flake8-comprehensions
    "I",  # isort
    "B",  # flake8-bugbear
    "S",  # flake-bandit
]

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pdfkit",
    "jinja2",
]
ignore_missing_imports = true
